--- a/style.css
+++ b/style.css
@@ -4,4 +4,10 @@
     margin-top: 10px;
     padding: 10px;
     width: 500px;
+    font-family: arial, sans-serif;
   }
+
+#font-options{
+  display: inline;
+
+}
