--- a/texteditor/style.css
+++ b/texteditor/style.css
@@ -1,13 +1,46 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+#main-container, #nav-container {
+  padding: 20px;
+  border: solid blue;
+}
+
+#nav-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 5%;
+  position: fixed;
+}
+
+#nav-container > * {
+  margin: 0 5px;
+}
+
+#main-container {
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+  border: solid red
+}
+
 #editor {
-    border: thin solid #ccc;
-    height: 250px;
-    margin-top: 10px;
-    padding: 10px;
-    width: 500px;
-    font-family: arial, sans-serif;
-  }
+  border: thin solid #ccc;
+  width: 100%;
+  height: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  font-family: arial, sans-serif;
+}
 
 #font-options{
   display: inline;
-
 }
